src/app/app.component.scss
@import 'app.functions', 'app.mixins', 'app.images';
$font-primary: 'Raleway'; // Poiret One, Text Me One, IM Fell Double Pica SC
$font-fancy: 'Dancing Script';
$font-fancy-alternate: 'IM Fell Double Pica SC';
@import url('https://fonts.googleapis.com/css?family=#{str-replace($font-primary, " ", "+")}|#{str-replace($font-fancy, " ", "+")}|#{str-replace($font-fancy-alternate, " ", "+")}');
@import '~bootstrap/scss/_variables.scss';
@import '~bootstrap/scss/mixins/_breakpoints.scss';

* {
  font-family: $font-primary;
  -webkit-font-smoothing: antialiased;
  -webkit-text-stroke: .6px #fff;
}

.text-fancy {
  font-family: $font-fancy;
}

.text-fancy-alternate {
  font-family: $font-fancy-alternate;
}

.text-muted {
  color: #5b6368!important;
}

a {
  text-decoration: none;
  &:hover {
    opacity: .8;
    // color: white;
  }
  &:hover, &:focus {
    text-decoration: none;
    outline: none;
  }
}

header {
  background-image: url(http://placehold.it/1750x550);
  height: 510px;
  background-size: cover;
  background-position-y: 50%;
  background-repeat: no-repeat;
}

@include media-breakpoint-down(md) {
  div.burger-wrapper {
    background: rgba(255,255,255,.3);
    border-radius: 5px;
    display: inline-block;
  }
  header {
    background-position-x: 50%;
  }
}
@include media-breakpoint-up(md) {
  header {
    height: 710px;
  }
  nav, .nav {
    padding-left: 0!important;
    padding-right: 0!important;
  }
}

nav.navbar {
  background: transparent;
  position: absolute;
  width: 100%;
  .navbar-toggler {
    outline: none;
  }
  &.bg-light {
    background: linear-gradient(to bottom, rgba(201,201,201,1), rgba(255,0,0,0));
    padding-bottom: 40px;
  }
  &.bg-dark {
    background: linear-gradient(to bottom, #565656, rgba(255,0,0,0));
    padding-bottom: 120px;
  }
  .navbar-nav {
    .nav-item {
      margin: 0 20px;
      .nav-link {
        color: white;
        font-size: 18px;
        border-bottom: 2px solid transparent;
        &:hover, &:focus {
          color: white;
        }
        &.active {
          border-bottom-color: white;
        }
      }
    }
  }
}

body::after {
  display: none;
  content: $preloaded-images;
}

